--- a/Lab1.adoc
+++ b/Lab1.adoc
@@ -1,5 +1,5 @@
 = Лабораторная работа 1
-Автор
+Выполнила студентка группы КЭ-413, Кузнецова А.С.
 :imagesdir: Picture
 :toc:
 :toc-title: Оглавление
@@ -33,7 +33,7 @@
 Процесс компиляции состоит из следующих этапов:
 
 . Лексический анализ. Последовательность символов исходного файла преобразуется в последовательность лексем.
-Синтаксический анализ. Последовательность лексем преобразуется в дерево разбора.
+. Синтаксический анализ. Последовательность лексем преобразуется в дерево разбора.
 . Семантический анализ. Дерево разбора обрабатывается с целью установления его семантики (смысла) — например, привязка идентификаторов к их декларациям, типам, проверка совместимости, определение типов выражений и т. д.
 . Оптимизация. Выполняется удаление излишних конструкций и упрощение кода с сохранением его смысла.
 . Генерация кода. Из промежуточного представления порождается объектный код.
@@ -42,20 +42,22 @@
 
 Объектный код — это программа на языке машинных кодов с частичным сохранением символьной информации, необходимой в процессе сборки.
 
-Этапы компиляции представлены на рисунке 1.
+Этапы компиляции представлены (рисунок <<picture1>>).
 
 .Этапы компиляции
+[#picture1]
 image::Рисунок1.png[]
 
-=== Линковка
-Линковка – это последний этап процесса получения исполняемого файла, который связывает вместе все объектные файлы проекта.
+=== Компоновка
+Компоновка (линковка) – это последний этап процесса получения исполняемого файла, который связывает вместе все объектные файлы проекта.
 
 На этом этапе можно столкнуться с ошибками связывания.
 Если, например, функция была объявлена, но не определена, ошибка покажется только на этом этапе.
 
 === Загрузка
 
-Загрузка переносит программу в оперативную память, чтобы начать ее выполнение.
+Загрузка переносит программу в оперативную память, это необходимо, потому что работа с данными в оперативной памяти происходит быстрее, чем с диска. Далее начинается выполнение программы.
+Загрузка нужна для того, чтобы программа работала быстрее и эффективнее.
 
 == Запуск кода на микроконтроллере
 
@@ -64,8 +66,10 @@ image::Рисунок1.png[]
 1. Написание программы. 
 2. Компиляция. Она преобразует ваш исходный код в машинный код (объектный код).
 3. Загрузка кода. После компиляции полученный файл нужно загрузить на микроконтроллер. 
-4. Запуск. 
+4. Выполнение кода. Микроконтроллер начинает поочередно выполнять команцы из памяти.
 5. Отладка и тестирование. При запуске кода могут возникать ошибки, и для этого может понадобиться отладка. Чтобы улучшить код или исправлять ошибки. 
+
+Таким образом, запуск программы на микроконтроллере - это процесс написания кода, его загрузки в память, и последующее выполнение инструкций.
 
 == Что такое стек и для чего он нужен?
 
@@ -75,34 +79,40 @@ image::Рисунок1.png[]
 
 Для наглядности рассмотрим более подробно на схеме. Рассмотрим пример программы с тремя функциями: первая вызывает вторую, вторая — третью и так далее.
 
-Шаг 1. Компьютер выполняет основную программу и доходит до вызова функции 1. Он прерывает выполнение основной программы, помещает адрес возврата в стек и переходит к выполнению функции 1 (Рисунок 2).
+Шаг 1. Компьютер выполняет основную программу и доходит до вызова функции 1. Он прерывает выполнение основной программы, помещает адрес возврата в стек и переходит к выполнению функции 1 (pисунок <<picture2>>).
 
 .Шаг 1
+[#picture2]
 image::Рисунок2.png[]
 
-Шаг 2. Компьютер выполняет функцию 1 и доходит до вызова функции 2. Он прерывает выполнение функции 1, помещает её адрес возврата в стек и выполняет функцию 2 (Рисунок 3).
+Шаг 2. Компьютер выполняет функцию 1 и доходит до вызова функции 2. Он прерывает выполнение функции 1, помещает её адрес возврата в стек и выполняет функцию 2 (pисунок <<picture3>>).
 
 .Шаг 2
+[#picture3]
 image::Рисунок3.png[]
 
-Шаг 3. Компьютер заканчивает выполнение функции 2, считывает и удаляет с вершины стека адрес возврата функции 1. Затем он переходит к функции 1 и продолжает её выполнение с инструкции, находящейся по адресу возврата (Рисунок 4).
+Шаг 3. Компьютер заканчивает выполнение функции 2, считывает и удаляет с вершины стека адрес возврата функции 1. Затем он переходит к функции 1 и продолжает её выполнение с инструкции, находящейся по адресу возврата (pисунок <<picture4>>).
 
 .Шаг 3
+[#picture4]
 image::Рисунок4.png[]
 
-Шаг 4. Компьютер заканчивает выполнение функции 1, считывает и удаляет с вершины стека адрес возврата основной программы. Затем он переходит к основной программе и продолжает её выполнение с указанного адреса. Стек полностью очищается до следующего вызова (Рисунок 5).
+Шаг 4. Компьютер заканчивает выполнение функции 1, считывает и удаляет с вершины стека адрес возврата основной программы. Затем он переходит к основной программе и продолжает её выполнение с указанного адреса. Стек полностью очищается до следующего вызова (pисунок <<picture5>>).
 
 .Шаг 4
+[#picture5]
 image::Рисунок5.png[]
 
 === Как размер стека влияет на программу?
 Чтобы стек не разрастался в памяти, ему задаётся конкретный размер — либо системой, либо самим программистом. Но если вызовов в программе будет слишком много, стек может внезапно переполниться — в этом случае программа аварийно завершит работу и выдаст ошибку о переполнении стека.
+
 == Локальные и глобальны переменные
 Локальными называют любые переменные, объявленные внутри функции.
 Глобальными называют переменные, объявленные в программе вне функций (в том числе и вне функции main()). Глобальные переменные существуют в течение всего времени работы программы и занимают память независимо от того, используются они или нет.
-В замкнутом внутреннем мире мы можем иметь свои переменные, но также иметь доступ к переменным внешнего, глобального мира. А из внешнего мира не видно то, что что происходит во внутреннем (Рисунок 6).
+В замкнутом внутреннем мире мы можем иметь свои переменные, но также иметь доступ к переменным внешнего, глобального мира. А из внешнего мира не видно то, что что происходит во внутреннем (pисунок <<picture6>>).
 
 .Пример глобальных и локальных переменных
+[#picture6]
 image::Рисунок6.png[]
 
 В начале работы функция выделяет память в стеке для запоминания своих локальных переменных. После возврата из функции стековая память удаляется, уничтожая все хранящиеся в ней переменные, что позволяет:
@@ -114,19 +124,43 @@ image::Рисунок6.png[]
 Глобальные переменные необходимы в тех случаях, когда данные нужно сделать доступными для многих функций, а передача параметров из функции в функцию является проблематичной. Однако использование глобальных переменных в силу своей общедоступности часто чревато возникновением ошибок.
 
 Локальным переменным нужно присваивать начальные значения до их использования, так как в момент объявления значения этих переменных не определены. Глобальные переменные автоматически инициализируются нулевыми значениями при их объявлении.
-==Как работает линкер?
+
+== Как работает компоновщик?
 
 Работа компоновщика состоит из трех частей:
 
 * Во-первых, взять все объектные файлы, сгенерированные компилятором, и объединить их в единую исполняемую программу.
+Процесс компоновки пренставлен (pисунок <<picture7>>).
 
 .Рисунок процесс компоновки (линковки)
+[#picture7]
 image::Рисунок7.png[]
 
 * Во-вторых, помимо возможности связывать объектные файлы, компоновщик (линкер) также может связывать файлы библиотек. Файл библиотеки – это набор предварительно скомпилированного кода, который был «упакован» для повторного использования в других программах.
 * В-третьих, компоновщик обеспечивает правильное разрешение всех межфайловых зависимостей. Если компоновщик не может связать ссылку с чем-то с ее определением, вы получите ошибку компоновщика, и процесс линковки будет прерван.
 
 Как только компоновщик завершит линковку всех объектных файлов и библиотек (при условии, что всё идет хорошо), будет получен исполняемый файл, который затем можно будет запустить!
+
+=== Как компоновщик располагает переменнные по адресам?
+
+Рассмотрим, как компоновщик располагает переменные по адресам, в несколько этапов:
+
+. Код и данные. На этом этапе компоновщик соединяет все части программы (код, функции, переменные), которые хранятся в разных файлах.
+. Адреса памяти. Каждая программа работает в области памяти, которая делится на адреса. Компоновщик присваивает каждому элементу программы уникальный адрес в этой области памяти. 
+. Следит за размерами. Компоновщик смотрит за тем, сколько места занимает каждая переменная. Это нужно во избежание наложения элементов друг на друга. 
+. Расставляет элементы. Компоновщик начинает с первого адреса и поочередно выделяет место для каждой переменной и функции.
+. Создание таблицы. В итоге компоновщик создает таблицу, в которой записаны адреса всех переменных и функций. Это нужно, чтобы в дальнейшем программа знала, где каждый элемент находится в памяти. 
+. Финальный файл. В конце компоновщик создает один исполняемый файл, который содержит всё необходимое для работы программы.
+
+== Секции
+
+Секции — это области в файле объекта или исполняемом файле. В них содержатся различные типы данных или кода. Рассмотрим несколько из них:
+
+* .text — скомпилированный машинный код, сюда помещаются все написанные фукции и алгоритмы 
+* .data — глобальные и статические переменные. 
+* .rodata — аналог .data для неизменяемых данных. К примеру для строк, которые выводятся на экран.
+* .bss — глобальные и статические переменные, которые при старте содержат нулевое значение.
+
 
 ==  Оптимизация, и ее влияние на результат компилятора
 
