--- a/Lab1.adoc
+++ b/Lab1.adoc
@@ -56,8 +56,9 @@ image::Рисунок1.png[]
 
 === Загрузка
 
-Загрузка переносит программу в оперативную память, это необходимо, потому что работа с данными в оперативной памяти происходит быстрее, чем с диска. Далее начинается выполнение программы.
-Загрузка нужна для того, чтобы программа работала быстрее и эффективнее.
+Загрузка на микроконтроллере — это процесс запуска программы, который выполняется микроконтроллером после включения питания или перезагрузки.
+
+Микроконтроллеры используют флеш-память для хранения программы. Флеш-память — это место, где хранится программа, её можно перезаписывать при необходимости.
 
 == Запуск кода на микроконтроллере
 
