--- a/laba 3-4.adoc
+++ b/laba 3-4.adoc
@@ -6,6 +6,29 @@
 :toclevels: 2
 :figure-caption: Рисунок
 :table-caption: Таблица
+include::tituln.adoc[]
+
+== Принцип Single Responsibility
+
+Принцип Single Responsibility (единственной ответственности) гласит, что у каждой части кода (например, класса или функции) должна быть только одна задача и одна причина для изменения.
+
+Например:
+Если класс отвечает за всё сразу — например, создаёт отчёт, форматирует его и отправляет по почте — это плохо. При изменении одной задачи легко повредить другие.
+
+Как правильно?
+Небходимо разделить задачи:
+
+* ReportGenerator — отвечает за создание отчёта.
+* ReportFormatter — отвечает за форматирование отчёта.
+* ReportSender — отвечает за отправку.
+
+Почему это важно?
+
+* Код проще понимать и поддерживать.
+* Ошибки легче находить.
+* Логика каждого компонента чётко определена.
+
+Принцип SRP помогает сделать код более упорядоченным, простым для понимания и удобным для доработки. Вместо того чтобы собирать всё в одном месте, вы разделяете задачи, чтобы код выглядел логично и легко читался.
 
 == Указатели 
 
@@ -188,7 +211,7 @@ for(;;)
 .UML-диаграмма
 image::Picture1.jpg[]
 
-На диаграмме показано, что функции для включения, выключения и переключения состояния светодиодов (Light, Off, Toggle) реализованы через отдельный класс (интерфейс). Это соответствует принципу Single Responsibility, так как каждая функция выполняет свою задачу. Режимы работы светодиодов имеют два метода: обновление (Update()) и установление (Init()), которые реализованы в отдельных классах для каждого режима.
+На диаграмме показано, что функции для включения, выключения и переключения состояния светодиодов (Light, Off, Toggle) реализованы через отдельный класс. Это соответствует принципу Single Responsibility, так как каждая функция выполняет свою задачу. Режимы работы светодиодов имеют два метода: обновление (Update()) и установление (Init()), которые реализованы в отдельных классах для каждого режима.
 
 === Зажигание светодиодов в шахматном порядке
 
@@ -209,7 +232,7 @@ class IMode
 
 [source, cpp]
 ----
-using tLeds = std::array<ILed*, 4>; // Создание массива указателей на объекты виртуального класса
+using tLeds = std::array<ILed*, 4>; // Объявление превдонима типа массив на 4 указателя типа ILed
 class ChessMode: public IMode
     {
     public:
@@ -300,38 +323,75 @@ class TreeMode:public IMode
     {
         
     }
-      void Update() override
-      {
-         for(auto it: leds)
-        {
+  void Update() override
+  {  
+    leds[currentLedIndex]->Switch();
+    currentLedIndex++;
+    if(currentLedIndex >= leds.size())
+    {
+      currentLedIndex=0;
+    }
+  }  
+    
+  void Init() override
+  { 
+    currentLedIndex=0;
+    for(auto it: leds)
+     {   
           it->Light();
-        }
-        for(auto i=0; i< leds.size(); ++i)
-        {
-            leds[i]->Toggle();
-        }
-      }
-        void Init() override
-      {
-        for(auto it: leds)
-        {
-          it->Light();
-        }
-        for(auto i=0; i< leds.size(); ++i)
-        {
-            leds[i]->Toggle();
-        }
-      }
+     }   
+ 
+   }   
     private:
       tLeds& leds;
+      std::size_t currentLedIndex;
     };
+
+      for(;;)
+    
+int main()
+{  
+  RCC::AHB1ENR::GPIOAEN::Enable::Set() ;
+  RCC::AHB1ENR::GPIOCEN::Enable::Set() ;
+  GPIOA::MODER::MODER5::Output::Set() ;
+  GPIOC::MODER::MODER5::Output::Set() ;
+  GPIOC::MODER::MODER8::Output::Set() ;
+  GPIOC::MODER::MODER9::Output::Set() ;
+
+  
+  Led<GPIOC, 5> led1;
+  Led<GPIOC, 8> led2;
+  Led<GPIOC, 9> led3;
+  Led<GPIOA, 5> led4;
+
+  
+   tLeds leds = {
+    &led1,
+    &led2,
+    &led3,
+    &led4};
+
+    TreeMode treemode(leds);
+    treemode.Init();
+
+  for(;;)
+  {
+
+   treemode.Update();
+  
+  }
+
+}
 ----
 
 Этот код создает класс TreeMode, который управляет светодиодами. В нем два метода:
 
-* Update() — включает все светодиоды и затем меняет их состояние (включает, если они выключены, и выключает, если они включены).
-* Init() — тоже включает все светодиоды и меняет их состояние.
-Класс работает с массивом светодиодов, который передается при его создании
+Класс TreeMode:
+
+Init(): Все светодиоды включаются.
+Update(): Светодиоды переключаются по очереди (текущий выключается, следующий включается). После последнего светодиода цикл начинается заново.
+
+Класс работает с массивом светодиодов, который передается при его создании.
 
 == Заключение
 
