--- a/5-6.adoc
+++ b/5-6.adoc
@@ -40,9 +40,9 @@ include::Titul1.adoc[]
 @startuml
 
 interface IModeManager {
-  + InitModeManager()
-  + UpdateModeManager()
-  + SwitchModeManager()
+  + Init()
+  + Update()
+  + Switch()
 }
 
 interface IButton {
@@ -52,12 +52,12 @@ interface IButton {
 class ModeManager {
   - tMode& modes
   - std::uint8_t currentModeType
-  + InitModeManager()
-  + UpdateModeManager()
-  + SwitchModeManager()
+  + Init()
+  + Update()
+  + Switch()
 }
 
-class Button<Tport, punNumber> {
+class Button<TPort, pinNumber> {
   - bool currentStatus
   - std::uint32_t buttonPortStatus
   + onClick(): bool
@@ -72,6 +72,8 @@ IButton <|-- Button
 
 @enduml
 ----
+
+Класс Button<TPort, pinNumber> предназначен для управления и обработки ввода с кнопки (или других подобных устройств) в микроконтроллерных или встроенных системах. Этот шаблонный класс, как видно из его структуры, абстрагирует взаимодействие с кнопкой, предоставляя функциональность для определения событий нажатия.
 
 Ниже представлена реализация каждого класса на основе диагараммы UML:
 
@@ -291,13 +293,16 @@ int __low_level_init(void)
 
 Далее приведено описание кода
 
-. Сначала активируется внешний кварцевый генератор с частотой 16 МГц, который служит стабильным источником тактового сигнала для системы. После активации программа ожидает готовности генератора, проверяя соответствующий флаг.
+Код выполняет начальную настройку микроконтроллера:
 
-. Затем микроконтроллер переключается с внутреннего осциллятора на внешний генератор. Это позволяет получить более точный и стабильный тактовый сигнал. После переключения код ожидает подтверждения успешного перехода.
+* Устанавливает системную частоту 16 МГц.
+* Включает внутренний генератор HSI и ждет его готовности.
+* Переключает систему на HSI как источник тактового сигнала.
+* Настраивает таймер SysTick на системную частоту.
+* Включает модуль SYSCFG.
+* Возвращает 1 при успешной инициализации.
 
-. После этого настраивается SysTick, который отвечает за измерение времени в системе и создание таймерных интервалов. Для правильной работы SysTick требуется тактовый сигнал, синхронизированный с тактовой частотой процессора.
-
-. В завершение активируется тактирование системы конфигурации SYSCFG. Это необходимо для работы с системными компонентами, такими как GPIO, прерывания и другие настройки. Включение SYSCFG обеспечивает доступ ко всем функциям микроконтроллера.
+SysTick — это встроенный таймер в микроконтроллерах на базе ARM Cortex-M. Его используют для создания задержек, периодических событий или работы с операционными системами.
 
 === Пример кода с использованием HSE
 
@@ -351,40 +356,38 @@ f = 13.666МГц, например, выберем: PLLM = 8; PLLN = 137; PLLP =
 std::uint32_t SystemCoreClock = 13'666'000U;
 
 extern "C" 
- int __low_level_init(void)
+int __low_level_init(void) {
 
-  RCC::PLLCFGR::PLLSRC::HseSource::Set();
+    // Включаем внешний осциллятор (HSE)
+    RCC::CR::HSEON::On::Set();
+    while (!RCC::CR::HSERDY::Ready::IsSet()) {
+    }
 
-    //137
+    RCC::PLLCFGR::PLLSRC::HseSource::Set();
+
+    // 137
     RCC::PLLCFGR::PLLN0::Set(0b10001001);
    
-
-    //8
+    // 8
     RCC::PLLCFGR::PLLP0::Set(0b11);
   
-
-    //8
+    // 8
     RCC::PLLCFGR::PLLM0::Set(0b001000);
-    
 
-  
     RCC::CR::HSION::Off::Set();
 
-   
     RCC::CR::PLLON::On::Set();
     while (RCC::CR::PLLRDY::Unclocked::IsSet()) {
-        
     }
 
     RCC::CFGR::SW::Pll::Set();
     while (!RCC::CFGR::SWS::Pll::IsSet()) {
-      
     }
 
-   
     RCC::APB2ENR::SYSCFGEN::Enable::Set();
 
     return 1;
+}
 
 ----
 
